[package]
name = "site"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
incremental = true
opt-level = 0
codegen-units = 256
debug = 0
lto = "off"
overflow-checks = false
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
# strip = "symbols"
[profile.wasm-release]
inherits = "release"
opt-level = 'z'

[workspace]
resolver = "2"
members = ["lib", "admin", "cli", "prisma_cli", "prisma_client"]

[workspace.dependencies]
lib = { path = "./lib" }
axum = { version = "0.8", features = ["macros", "tracing"] }
axum_session = { version = "0.16", default-features = false }
axum_session_auth = { version = "0.16", default-features = false }
bcrypt = { version = "0.15" }
cfg-if = "1"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
http = "1.0"
js-sys = { version = "0.3" }
leptos = { version = "0.8", features = ["nightly", "tracing"] }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
log = "0.4"
prisma_client = { path = "./prisma_client" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "e269dee", default-features = false, features = [
    "sqlite",
    "sqlite-create-many",
    "migrations",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "e269dee", default-features = false, features = [
    "sqlite",
    "sqlite-create-many",
    "migrations",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.3"
thiserror = "2"
tokio = { version = "1.41" }
tower = { version = "0.5" }
tower_governor = { version = "0.7" }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "File",
    "FileList",
    "HtmlDialogElement",
    "HtmlDocument",
    "HtmlInputElement",
    "Url",
] }

[dependencies]
clorinde = { path = "clorinde", optional = true }
lib = { workspace = true, features = ["leptos"] }
axum = { workspace = true, optional = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
http = { workspace = true }
js-sys = { workspace = true, optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
log = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
prod = ["compression", "ratelimit"]
tracing = [] # not used
compression = ["tower-http?/compression-full"]
ratelimit = []
hydrate = [
    "dep:js-sys",
    "dep:log",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:clorinde",
    "dep:tower_governor",
    "dep:tower-http",
    "dep:tower",
    "dep:tracing-subscriber",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/ssr",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:4141"
reload-port = 4142
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
