[package]
name = "admin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lib = { workspace = true, features = ["leptos"] }
anyhow = "1"
async-trait = { version = "0.1", optional = true }
axum = { workspace = true, optional = true }
axum_session = { version = "0.12.4", default-features = false, optional = true }
axum_session_auth = { version = "0.12.1", default-features = false, optional = true }
bcrypt = { workspace = true, optional = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
http = { workspace = true }
image = { version = "0.24", optional = true, features = ["webp-encoder"] }
js-sys = { workspace = true, optional = true }
kamadak-exif = { version = "0.5", optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
log = { workspace = true, optional = true }
prisma_client = { workspace = true, optional = true }
prisma-client-rust = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { workspace = true, optional = true }

[features]
prod = ["compression", "ratelimit"]
compression = ["tower-http?/compression-full"]
ratelimit = []
hydrate = [
    "dep:js-sys",
    "dep:log",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "leptos/hydrate",
]
ssr = [
    "dep:async-trait",
    "dep:axum_session_auth",
    "dep:axum_session",
    "dep:axum",
    "dep:bcrypt",
    "dep:image",
    "dep:kamadak-exif",
    "dep:leptos_axum",
    "dep:prisma_client",
    "dep:prisma-client-rust",
    "dep:tower_governor",
    "dep:tower-http",
    "dep:tower",
    "dep:tracing-subscriber",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/ssr",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
site-root = "target/admin"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:4143"
reload-port = 4444
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
