[package]
name = "admin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lib = { workspace = true, features = ["leptos"] }
anyhow = "1"
async-trait = { version = "0.1", optional = true }
axum = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clorinde = { workspace = true, optional = true }
config = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true }
cuid2 = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
gloo-utils = { workspace = true }
http = { workspace = true }
image = { version = "0.25.5", optional = true }
js-sys = { workspace = true, optional = true }
kamadak-exif = { version = "0.6.1", optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
log = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { workspace = true, optional = true }

[features]
all = ["prod", "hydrate", "ssr"]
prod = ["compression", "ratelimit"]
tracing = [] # not used
compression = ["tower-http?/compression-full"]
ratelimit = []
hydrate = [
    "dep:js-sys",
    "dep:log",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "leptos/hydrate",
]
ssr = [
    "dep:clorinde",
    "dep:async-trait",
    "dep:axum_session_auth",
    "dep:axum_session",
    "dep:axum",
    "dep:bcrypt",
    "dep:config",
    "dep:cuid2",
    "dep:dotenvy",
    "dep:deadpool-postgres",
    "dep:image",
    "dep:kamadak-exif",
    "dep:leptos_axum",
    "dep:tower_governor",
    "dep:tower-http",
    "dep:tower",
    "dep:tracing-subscriber",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/ssr",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
site-root = "target/admin"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:4143"
reload-port = 4444
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
