[package]
name = "cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bcrypt = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
