[package]
name = "cli"
version = "0.1.0"
edition = "2021"
publish = false

[features]
all = []

[dependencies]
clorinde.workspace = true
bcrypt.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
