[package]
name = "lib"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
leptos = ["dep:leptos", "dep:http"]
server = [
#     "dep:prisma_client",
#     "dep:prisma-client-rust",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
http = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
# prisma_client = { workspace = true, optional = true }
# prisma-client-rust = { workspace = true, optional = true }
# serde = { workspace = true }
thiserror = { workspace = true }
# tokio = { workspace = true }
tracing = { workspace = true }
